Restructuring
Introduced messaging
Added not null validation
Removed indirections
Cleanup
Mutation testing
Improved tests
Enabled integration tests